--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "brooke1220/webman-ffmpeg",
+  "name": "sockstack/webman-ffmpeg",
   "type": "library",
   "license": "MIT",
   "description": "Webman plugin brooke1220/webman-ffmpeg",
