--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,9 @@
     "php": "^8.0|^8.1|^8.2",
     "php-ffmpeg/php-ffmpeg": "^1.1",
     "php-di/php-di": "^6.4",
-    "illuminate/support": ">=8.0",
-    "webman-tech/laravel-filesystem": "^3.0"
+    "illuminate/support": ">=9.0",
+    "webman-tech/laravel-filesystem": "^3.0",
+    "league/flysystem": "^3.0"
   },
   "autoload": {
     "psr-4": {
